k8s/springmysql-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springmysql
  namespace: homeeee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springmysql
  template:
    metadata:
      labels:
        app: springmysql
        tags.datadoghq.com/env: stg
        tags.datadoghq.com/service: springmysql-admsvr
        tags.datadoghq.com/version: '1.0'
    spec:
      containers:
        - name: springmysql
          # image: acrHomeeee.azurecr.io/springmysql:0.2.1
          # image: acrHomeeee.azurecr.io/springmysql:latest
          # image: 520666629845.dkr.ecr.ap-northeast-2.amazonaws.com/springmysql:0.1.0
          image: 388452608359.dkr.ecr.ap-northeast-2.amazonaws.com/springmysql:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 3
            successThreshod: 1
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySecond: 20
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          resources:
            requests:
              cpu: 250m
              # cpu: 100m
              memory: 256Mi
              # memory: 2048Mi
            limits:
              cpu: 500m
              # cpu: 100m
              memory: 512Mi
              # memory: 2048Mi
      volumeMounts:
      - name: apmsocketpath
        mountPath: /var/run/datadog
      - mountPath: /batch
        name: smp-batch
        persistentVolumeClaim:
          claimName: smtp-batch
      terminationGracePeriodSeconds: 60
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - springmysql
              topologyKey: kubernetes.io/hostname
